--- a/LoongArch/Makefile
+++ b/LoongArch/Makefile
@@ -1,5 +1,4 @@
 
-
 COMPILE_FILE_C = main.c struct.c gpio.c rtc.c acpi.c conf.c pci.c vtpa.c ParseGmac.c spi.c mps.c i2c.c spd.c ht.c
 COMPILE_FILE_O = main.o struct.o gpio.o rtc.o acpi.o conf.o pci.o vtpa.o ParseGmac.o spi.o mps.o i2c.o spd.o ht.o
 
@@ -13,7 +12,8 @@ OsTools : OsTools.o
 	$(COMPILE_PATH) -static $(COMPILE_FILE_O) -o OsTools
 	chmod 777 OsTools
 OsTools.o :
-	$(COMPILE_PATH) -g -c $(COMPILE_FILE_C) 
+	#$(COMPILE_PATH) -g -c $(COMPILE_FILE_C) 
+	$(COMPILE_PATH) -c $(COMPILE_FILE_C) 
 
 clean :
 	rm *.o OsTools
